--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,15 @@
 # next.js
 /.next/
 /out/
+next.config.*
+now.json
+.now
 
 # production
 /build
 
 # misc
 .DS_Store
-*.pem
 
 # debug
 npm-debug.log*
@@ -29,6 +31,4 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
-
-# vercel
-.vercel
+.env
