--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "next": "latest",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-particles-js": "^3.3.0",
+    "react-responsive": "^8.1.0",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
