--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-particles-js": "^3.3.0",
     "react-responsive": "^8.1.0",
     "react-spring": "^8.0.27",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "use-typed": "0.0.1"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.8.0",
