--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "next": "latest",
     "react": "^16.8.0",
+    "react-cool-inview": "^1.1.2",
     "react-dom": "^16.8.0",
     "react-particles-js": "^3.3.0",
     "react-responsive": "^8.1.0",
