--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-particles-js": "^3.3.0",
     "react-responsive": "^8.1.0",
     "react-spring": "^8.0.27",
+    "react-stonecutter": "^0.3.10",
     "styled-components": "^5.0.0",
     "use-typed": "0.0.1"
   },
