--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.8.0",
     "react-cool-inview": "^1.1.2",
     "react-dom": "^16.8.0",
+    "react-icons": "^3.10.0",
     "react-particles-js": "^3.3.0",
     "react-responsive": "^8.1.0",
     "react-spring": "^8.0.27",
