--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-responsive": "^8.1.0",
     "react-spring": "^8.0.27",
     "react-stonecutter": "^0.3.10",
+    "rodal": "^1.8.1",
     "styled-components": "^5.0.0",
     "use-typed": "0.0.1"
   },
