--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^3.10.0",
     "react-particles-js": "^3.3.0",
     "react-responsive": "^8.1.0",
+    "react-ripples": "^2.2.1",
     "react-slick": "^0.27.4",
     "react-spring": "^8.0.27",
     "react-stonecutter": "^0.3.10",
