--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "react": "^16.8.0",
     "react-cool-inview": "^1.1.2",
     "react-dom": "^16.8.0",
-    "react-hook-form": "^6.3.2",
     "react-icons": "^3.10.0",
+    "react-lottie": "^1.2.3",
     "react-particles-js": "^3.3.0",
     "react-responsive": "^8.1.0",
     "react-ripples": "^2.2.1",
