--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-lottie": "^1.2.3",
     "react-particles-js": "^3.3.0",
     "react-responsive": "^8.1.0",
+    "react-reveal": "^1.2.2",
     "react-ripples": "^2.2.1",
     "react-slick": "^0.27.4",
     "react-spring": "^8.0.27",
