--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-styled-components",
+  "name": "itamarcohen.dev",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "next": "latest",
+    "nodemailer": "^6.4.11",
+    "nodemailer-mailgun-transport": "^2.0.0",
     "react": "^16.8.0",
     "react-cool-inview": "^1.1.2",
     "react-dom": "^16.8.0",
