--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint:css": "stylelint ./components/**/*.js"
+    "lint:css": "stylelint ./components/**/*.js",
+    "analyze": "cross-env ANALYZE=true next build",
+    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
     "next": "latest",
@@ -15,7 +18,6 @@
     "react-cool-inview": "^1.1.2",
     "react-dom": "^16.8.0",
     "react-icons": "^3.10.0",
-    "react-lottie": "^1.2.3",
     "react-particles-js": "^3.3.0",
     "react-responsive": "^8.1.0",
     "react-reveal": "^1.2.2",
@@ -28,7 +30,9 @@
     "use-typed": "0.0.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^9.5.2",
     "babel-plugin-styled-components": "^1.8.0",
+    "cross-env": "^7.0.2",
     "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
