--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
+    "@welldone-software/why-did-you-render": "^5.0.0-alpha.1",
     "next": "latest",
     "nodemailer": "^6.4.11",
     "nodemailer-mailgun-transport": "^2.0.0",
