--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-spring": "^8.0.27",
     "react-stonecutter": "^0.3.10",
     "rodal": "^1.8.1",
+    "smoothscroll-polyfill": "^0.4.4",
     "styled-components": "^5.0.0",
     "use-typed": "0.0.1"
   },
